--- a/yamls/nfs-provisioner/class.yaml
+++ b/yamls/nfs-provisioner/class.yaml
@@ -2,6 +2,6 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: managed-nfs-storage
-provisioner: example.com/nfs
+provisioner: wizen.com/nfs
 parameters:
   archiveOnDelete: "false"
