--- a/yamls/nfs-provisioner/default-sc.yaml
+++ b/yamls/nfs-provisioner/default-sc.yaml
@@ -4,6 +4,6 @@ metadata:
   name: managed-nfs-storage
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
-provisioner: example.com/nfs
+provisioner: wizen.com/nfs
 parameters:
   archiveOnDelete: "false"
