--- a/yamls/4-pvc-nfs.yaml
+++ b/yamls/4-pvc-nfs.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-nfs-pv1
+  name: pvc1
 spec:
-  storageClassName: manual
+  storageClassName: managed-nfs-storage
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 500Mi
+      storage: 100Gi
