--- a/yamls/4-pv-nfs.yaml
+++ b/yamls/4-pv-nfs.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-nfs-pv1
+  name: pv1
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: managed-nfs-storage
   capacity:
-    storage: 1Gi
+    storage: 100Gi
   accessModes:
     - ReadWriteMany
   nfs:
-    server: <nfs server ip>
+    server: 192.168.137.4
     path: "/srv/nfs/kubedata"
