--- a/deploy/nexus/nexus.yaml
+++ b/deploy/nexus/nexus.yaml
@@ -16,7 +16,7 @@ spec:
     requests:
       storage: 50Gi
 ---
-apiVersion: extensions/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nexus
