--- a/deploy/nexus/nexus.yaml
+++ b/deploy/nexus/nexus.yaml
@@ -23,6 +23,9 @@ metadata:
   namespace: nexus
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: nexus
   template:
     metadata:
       labels:
