--- a/deploy/nexus/nexus.yaml
+++ b/deploy/nexus/nexus.yaml
@@ -29,7 +29,7 @@ spec:
   template:
     metadata:
       labels:
-        app: nexus
+        run: nexus
     spec:
       containers:
       - image: sonatype/nexus3
