--- a/deploy/nexus/nexus.yaml
+++ b/deploy/nexus/nexus.yaml
@@ -1,13 +1,12 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: nexus 
---- 
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: nexus 
+# --- 
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: nexus-pvc
-  namespace: nexus
 spec:
   storageClassName: managed-nfs-storage
   accessModes:
@@ -20,7 +19,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nexus
-  namespace: nexus
 spec:
   replicas: 1
   selector:
@@ -50,7 +48,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nexus-service
-  namespace: nexus
 spec:
   ports:
   - port: 80
@@ -69,7 +66,6 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: nexus-ingress-resource
-  namespace: nexus
   annotations:
     ingress.kubernetes.io/proxy-body-size: 100m
     kubernetes.io/tls-acme: "true"
